# dphil_project_search_index

./: .gitignore  README.md
Common/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Conversion.cpp  Conversion.h  DateTime.cpp  DateTime.h  FileInfo.cpp  FileInfo.h  FileTypes.cpp  FileTypes.h  Random.cpp  Random.h
Common/conf/: FileTypes.xml
Common/test/: CMakeLists.txt  Test.cpp
Index/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Index.cpp  Index.h  stdHeader.h
Index/Analyser/: Analyser.h  CMakeLists.txt  Test.cpp
Index/Document/: Document.h
Index/FSDSim/: FSDSim.cpp  FSDSim.ui  GenSimFiles.h  Main.cpp  Namespace.cpp
Index/FSDSim/Distributions/: AbstractContDist.cpp  Cauchy.h  ContDistFactory.cpp  ContDistFactory.h  DiscreteDist.cpp  DiscreteDist.h  LogNormal.cpp  Weibull.h
Index/FSDSim/Stat/: EasyFit.efp  Group.csv  Short-Dic_bkp.csv  Short-Dic_veryShort.csv  SizeStat_Audio.csv  SizeStat_Executable.csv  SizeStat_Misc.csv  SizeStat_System.csv  SizeStat_Video.csv  SizeStat_Web.csv  TypeStat.csv  TypeStat_Original Stat.csv  User.csv
Index/FSDSim/Test/: Test.cpp
Index/Index-Manager-Qt/: IndexManager.cpp  IndexManager.h  IndexManager.pro  IndexManager.ui  Main.cpp
Index/Merge/: IndexMerge.cpp
Index/Reader/: HitDoc.cpp  HitDoc.h  IndexReader.cpp
Index/Search/: IndexSearch.h  PriQueue.cpp  PriQueue.h
Index/SimIndex/: IndexManager.cpp  IndexManager.h  IndexManager.ui  Main.cpp  SimIndex.pro
Index/Store/: IndexInput.cpp  IndexInput.h  IndexOutput.cpp
Inverted-Index/: CTestTestfile.cmake  Index.h  Makefile  README.md  Tokeniser.cpp  Tokeniser.h  cmake_install.cmake
Inverted-Index/Analyser/: Analyser.cpp  (+5 more)
Language-Processor/: CMakeCache.txt  CMakeLists.txt  Dict.cpp  Dict.h  Makefile  Porter2Stemmer.cpp  info_helper.h  install_manifest.txt  load_wordnet.cpp  load_wordnet.h  pos_t.h
Language-Processor/Dictionary/: Short-Dic.csv
Language-Processor/test/: CMakeLists.txt  Makefile  Test.cpp
Ontology/: CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  Ontology.cpp  Ontology.h  SizeOntology.cpp  SizeOntology.h  TermOntology.h  TypeOntology.cpp  TypeOntology.h
Ontology/License/: Configuration.cfg
Ontology/Ontology-Manager/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Manager  Manager.cpp  cmake_install.cmake
Ontology/gdb/sparkseecpp-5.2.0/: LICENSE.txt  READ.ME  ReleaseNotes.txt
Ontology/gdb/sparkseecpp-5.2.0/doc/html/: annotated.html  classAppError-members.html  classAppError.html  classAppError__coll__graph.map  classAppError__coll__graph.md5  classAppError__inherit__graph.map  classAppError__inherit__graph.md5  classAttribute-members.html  classAttribute.html  classAttributeList-members.html  classAttributeList.html  classAttributeListIterator-members.html  classAttributeListIterator.html  classAttributeStatistics-members.html  classAttributeStatistics.html  classAttributeStatistics__coll__graph.map  classAttributeStatistics__coll__graph.md5  classBooleanList-members.html  classBooleanList.html  classBooleanListIterator-members.html  classBooleanListIterator.html  classCSVReader-members.html  classCSVReader.html  classCSVReader__coll__graph.md5  classCSVReader__inherit__graph.map  classCSVWriter-members.html  classCSVWriter.html  classCSVWriter__coll__graph.map  classCSVWriter__inherit__graph.md5  classCommunitiesSCD-members.html  classCommunitiesSCD.html  classCommunitiesSCD__coll__graph.map  classCommunitiesSCD__coll__graph.md5  classCommunitiesSCD__inherit__graph.map  classCommunitiesSCD__inherit__graph.md5  classCommunityDetection-members.html  classCommunityDetection.html  classCommunityDetection__inherit__graph.map  classCommunityDetection__inherit__graph.md5  classConnectedComponents-members.html  (+490 more)
Ontology/gdb/sparkseecpp-5.2.0/includes/sparksee/algorithms/: CommunitiesSCD.h  CommunityDetection.h  ConnectedComponents.h  Connectivity.h  Context.h  DisjointCommunities.h  DisjointCommunityDetection.h  ShortestPath.h  SinglePairShortestPath.h  SinglePairShortestPathBFS.h  SinglePairShortestPathDijkstra.h  StrongConnectivity.h  StrongConnectivityGabow.h  Traversal.h  TraversalBFS.h  TraversalDFS.h  WeakConnectivity.h  WeakConnectivityDFS.h
Ontology/gdb/sparkseecpp-5.2.0/includes/sparksee/gdb/: Database.h  Exception.h  Export.h  Graph.h  Graph_data.h  Handler.h  Objects.h  ObjectsIterator.h  Query.h  QueryContext.h  ResultSet.h  Session.h  Sparksee.h  Stream.h  Value.h  Values.h  ValuesIterator.h  common.h
Ontology/gdb/sparkseecpp-5.2.0/includes/sparksee/io/: CSVReader.h  CSVWriter.h  EdgeTypeExporter.h  EdgeTypeLoader.h  NodeTypeExporter.h  NodeTypeLoader.h  RowReader.h  RowWriter.h  TypeExporter.h  TypeLoader.h
Ontology/gdb/sparkseecpp-5.2.0/includes/sparksee/script/: ScriptParser.h
Ontology/gdb/sparkseecpp-5.2.0/lib/linux32/: ScriptParser
Ontology/gdb/sparkseecpp-5.2.0/lib/linux64/: ScriptParser
Ontology/gdb/sparkseecpp-5.2.0/lib/macos64/: ScriptParser  libsparksee.dylib
Ontology/gdb/sparkseecpp-5.2.0/lib/windows32_VS2010/: sparksee.lib
Ontology/gdb/sparkseecpp-5.2.0/lib/windows32_VS2012/: sparksee.lib
Ontology/gdb/sparkseecpp-5.2.0/lib/windows32_VS2013/: sparksee.lib
Ontology/gdb/sparkseecpp-5.2.0/lib/windows64_VS2010/: sparksee.lib
Ontology/gdb/sparkseecpp-5.2.0/lib/windows64_VS2012/: sparksee.lib
Ontology/gdb/sparkseecpp-5.2.0/lib/windows64_VS2013/: sparksee.lib
QueryProcessor/: CMakeLists.txt  Query.h  QueryParser.cpp  QueryParser.h  QueryProcessor.cpp  QueryProcessor.h  QueryProcessor.pri  Term.cpp
QueryProcessor/MachineLearning/: NeuralNet.cpp  NeuralNet.h
QueryProcessor/Query-Processor-NodeJsWrapper/: .gitignore  QueryProcessorAddon.cpp  QueryProcessorWrapper.cpp  QueryProcessorWrapper.h  binding.gyp  build-command.sh  test.json
QueryProcessor/Query-Processor-NodeJsWrapper/Test/: data.json
QueryProcessor/Test/: CMakeLists.txt  Test.cpp
QueryProcessor/Treemap/: CacheParser.cpp  CacheParser.h  Layout.cpp  Layout.h  NodeTM.cpp  Treemap.cpp  Treemap.h
Simulate-Data/: DataManager.cpp  DataManager.h  DataManager.pro  DataManager.ui  GenSimFiles.cpp  GenSystemStat.cpp  Main.cpp  Namespace.h  Namespace.xml
(+205 files in other folders)
